--- a/app/views/shared/_side_bar.html.haml
+++ b/app/views/shared/_side_bar.html.haml
@@ -1,23 +1,29 @@
-.flash-box
-  .flash-box__class
-    グループを作成しました
+-# .flash-box
+-#   .flash-box__class
+    
 
 .contents
   .contents__left
     .contents__left__header
       .contents__left__header__box
-        seo
+        = current_user.name
       .contents__left__header_logo1
-        =link_to "", class: "btn" do
-          = fa_icon "cog"
+        = link_to new_group_path do
+          = fa_icon 'pencil-square-o', class: 'btn'
       .contents__left__header_logo2
-        =link_to "", class: "btn" do
-          = fa_icon "edit"
+        = link_to edit_user_path(current_user) do
+          = fa_icon 'cog', class: 'btn'
     .contents__left__footer1
-      .contents__left__footer1__box1
-        サンプル
-      .contents__left__footer1__box2
-        よろしくお願いします
+      - current_user.groups.each do |group|
+        = link_to '#' do
+          .contents__left__footer1__box1
+            = group.name
+          .contents__left__footer1__box2
+            メッセージはまだありません。
+      -# .contents__left__footer1__box1
+      -#   = group.name
+      -# .contents__left__footer1__box2
+      -#   メッセージはまだありません。
   .contents__right
     .contents__right__header
       .contents__right__header__area
