--- a/app/assets/stylesheets/modules/_side_bar.scss
+++ b/app/assets/stylesheets/modules/_side_bar.scss
@@ -43,17 +43,28 @@
       margin: 20px 0 40px 0;
     
       &__box1 {
-        font-size: 15px;
         font-weight: bold;
         color: $white;
-        margin-bottom: 5px;
+        margin: 20px 0 40px 0;
+
+        .b {
+          font-size: 15px;
+          text-decoration: none;
+          margin-bottom: 5px;
+          color: $white;
+        }
+      
+        .j {
+          font-size: 11px;
+          color: $white;
+        }
       }
 
-      &__box2 {
-        font-size: 11px;
-        font-weight: bold;
-        color: $white;
-      }
+      // &__box2 {
+      //   font-size: 11px;
+      //   font-weight: bold;
+      //   color: $white;
+      // }
     }
   }
 }
