--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,7 @@
-@import "./reset";
-@import "./messages";
+@import "modules/reset";
 @import "./variable";
 @import "font-awesome";
 @import "config/colors";
-@import "config/size";
-@import "config/reset";
-@import "mixins/mixin";
-@import "mixins/vendor_prefix";
-@import "modules/side_bar";
-@import "modules/chat";
 @import "modules/user";
-@import "messages/messages.scss"
+@import "modules/messages";
 @import "modules/flash";
