--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,7 +1,7 @@
 = render "shared/side_bar"
 .contents__right
   .contents__right__header
-    .contents__right__header__area
+    .contents__right__header__area{data: {id: @group.id}}
       .contents__right__header__area__box3
         = @group.name
       .contents__right__header__area__mem
