--- a/app/assets/stylesheets/modules/_user.scss
+++ b/app/assets/stylesheets/modules/_user.scss
@@ -69,6 +69,8 @@
         width: 100%;
         padding: 10px;
         letter-spacing: 1px;
+        height: 28px;
+        font-size: 15px;
       }
     }
   }
