--- a/app/assets/stylesheets/modules/_group.scss
+++ b/app/assets/stylesheets/modules/_group.scss
@@ -51,6 +51,7 @@ li {
     line-height: 30px;
     padding: 10px 15px;
     box-sizing: border-box;
+    font-size: 16px;
   }
   &__action-btn {
     display: inline-block;
@@ -58,6 +59,7 @@ li {
     color: #fff;
     background-color: #38aef0;
     border: 0;
+    font-size: 16px;
   }
   &__field {
     margin-top: 30px;
