--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,12 +1,20 @@
 @import "font-awesome";
+@import "modules/reset";
 @import "config/colors";
 @import "config/font";
+@import "modules/chat";
 @import "modules/user";
 @import "modules/group";
 @import "modules/flash";
 @import "modules/side_bar";
 @import "modules/messages";
 
-.contents {
-  display: flex;
+// .contents {
+//   display: flex;
+// }
+
+body {
+  clear: left;
+  margin: 0;
+  padding: 0;
 }
