--- a/app/assets/stylesheets/modules/_user.scss
+++ b/app/assets/stylesheets/modules/_user.scss
@@ -1,13 +1,11 @@
 .account-page {
   .account-page__inner {
-    width: 900px;
+    width: 980px;
     margin: 60px auto;
     padding: 60px;
     background-color: #fff;
     border: 1px solid #ddd;
     border-radius: 5px;
-    position: absolute;
-    left: 200px;
 
     .account-page__inner--left, .account-page__inner--right {
       float: left;
@@ -71,8 +69,6 @@
         width: 100%;
         padding: 10px;
         letter-spacing: 1px;
-        height: 28px;
-        font-size: 15px;
       }
     }
   }
@@ -93,7 +89,6 @@
     margin-top: 20px;
     color: #fff;
     background-color: #38aef0;
-    font-size: 15px;
   }
 
   .field-label {
@@ -130,8 +125,9 @@
 
   h2 {
     margin-bottom: 10px;
-    color: #d65f4c;
     font-size: 14px;
+    color: #d65f4c;
+    
   }
 
   ul {
@@ -145,4 +141,8 @@
     padding: 0;
     font-size: 13px;
   }
+}
+
+* {
+  box-sizing: border-box;
 }
