--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -25,14 +25,52 @@
       #chat-group-users
         #chat-group-user-22.chat-group-user.clearfix
           = f.hidden_field :user_ids, name: "group[user_ids][]", value: current_user.id
-          =current_user.name
+          %p.chat-group-user__name= current_user.name
+        - @group.users.where.not(name: current_user.name).each do |user|
+          #chat-group-user-8.chat-group-user.clearfix.js-chat-member
+            %input{:name => "group[user_ids][]", :type => "hidden", :value => user.id}/
+            %p.chat-group-user__name= user.name
+            .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+    .chat-group-form__field.clearfix
+      .chat-group-form__field--left
+      .chat-group-form__field--right
+        = f.submit class: 'chat-group-form__action-btn'
 
-  .chat-group-form__field.clearfix
-    .chat-group-form__field--left
-    .chat-group-form__field--right
-      = f.submit class: 'chat-group-form__action-btn'
 
 
+
+
+
+
+    -#   .chat-group-form__field.clearfix
+    -# .chat-group-form__field--left
+    -#   %label.chat-group-form__label{for: "chat_group_チャットメンバー"} チャットメンバー
+    -# .chat-group-form__field--right.chat-group-form__field--right--box
+    -#   #chat-group-user-8.chat-group-user.clearfix.js-chat-member
+    -#     %input{:name => "group[user_ids][]", :type => "hidden", :value => current_user.id}/
+    -#     %p.chat-group-user__name= current_user.name
+    -#   - @group.users.where.not(name: current_user.name).each do |user|
+    -#     #chat-group-user-8.chat-group-user.clearfix.js-chat-member
+    -#       %input{:name => "group[user_ids][]", :type => "hidden", :value => user.id}/
+    -#       %p.chat-group-user__name= user.name
+    -#       .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+
+
+
+
+
+
+-# .chat-group-form__field.clearfix
+-#     .chat-group-form__field--left
+-#       %label.chat-group-form__label{for: "menbers"} チャットメンバー
+-#     .chat-group-form__field--right
+-#       #chat-group-users
+-#         #chat-group-user-22.chat-group-user.clearfix
+-#           = f.hidden_field :user_ids, name: "group[user_ids][]", value: current_user.id
+-#           - @group.users.each do |group|
+-#             %p.chat-group-user__name
+-#               = group.name
+-#           -# =current_user.name
 
 
 
