--- a/app/views/groups/_form.html.haml
+++ b/app/views/groups/_form.html.haml
@@ -18,7 +18,7 @@
       .chat-group-form__search.clearfix
         %input#user-search-field.chat-group-form__input{placeholder: "追加したいユーザー名を入力してください", type: "text", name: "keyword"}/
       #user-search-result
-  .chat-group-form__field.clearfix
+    .chat-group-form__field.clearfix
     .chat-group-form__field--left
       %label.chat-group-form__label{for: "menbers"} チャットメンバー
     .chat-group-form__field--right
@@ -26,16 +26,15 @@
         #chat-group-user-22.chat-group-user.clearfix
           = f.hidden_field :user_ids, name: "group[user_ids][]", value: current_user.id
           %p.chat-group-user__name= current_user.name
-        - @group.users.where.not(name: current_user.name).each do |user|
-          #chat-group-user-8.chat-group-user.clearfix.js-chat-member
-            %input{:name => "group[user_ids][]", :type => "hidden", :value => user.id}/
-            %p.chat-group-user__name= user.name
-            .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
+      - group.users.where.not(name: current_user.name).each do |user|
+        #chat-group-user-22.chat-group-user.clearfix
+          = f.hidden_field :user_ids, name: "group[user_ids][]", value: user.id
+          %p.chat-group-user__name= user.name
+          .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
         = f.submit class: 'chat-group-form__action-btn'
-
 
 
 
