--- a/app/views/groups/edit.html.haml
+++ b/app/views/groups/edit.html.haml
@@ -1,3 +1,18 @@
 .chat-group-form
   %h1 チャットグループ編集
   = render partial: 'form', locals: { group: @group }
+
+
+  -# .chat-group-form__field.clearfix
+  -#   .chat-group-form__field--left
+  -#     %label.chat-group-form__label{for: "menbers"} チャットメンバー
+  -#   .chat-group-form__field--right
+  -#     #chat-group-users
+  -#       #chat-group-user-22.chat-group-user.clearfix
+  -#         = f.hidden_field :user_ids, name: "group[user_ids][]", value: current_user.id
+  -#         %p.chat-group-user__name= current_user.name
+  -#     - @group.users.where.not(name: current_user.name).each do |user|
+  -#       #chat-group-user-22.chat-group-user.clearfix
+  -#         = f.hidden_field :user_ids, name: "group[user_ids][]", value: current_user.id
+  -#         %p.chat-group-user__name= user.name
+  -#         .user-search-remove.chat-group-user__btn.chat-group-user__btn--remove.js-remove-btn 削除
